SERVER-8899 read-lock while updating ShardChunkManager in trySetVersion()